# simplifier-ig

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: build.yml  publish.yml
simplifier_ig/: __init__.py  __main__.py  cli.py  config.py  generator.py  ig_resource.py  initializer.py  logger.py  models.py  utils.py  validator.py  yaml_helpers.py
simplifier_ig/templates/: .simplifierupload  guide.yaml  variables.yaml
simplifier_ig/templates/pages/: index.md
simplifier_ig/templates/pagetemplates/: fql-get-examples.md  fql-get-mappings.md  fql-get-resource-base.md  fql-get-resource-copyright.md  fql-get-resource-date.md  fql-get-resource-description.md  fql-get-resource-name.md  fql-get-resource-version.md  fql-profile-bindings.md  fql-profile-constraints.md  fql-referenced-by.md  resource-fql-constraints.md  resource-fql-search-parameters.md  resource-fql-terminology-bindings.md  resource-meta-table.md  resource-meta.md  resource-view-example.md  resource-view-logical.md  resource-view-render.md  resource-view-tree.md
simplifier_ig/templates/pagetemplates-artifacts/: capabilitystatement.index.md  capabilitystatement.md  codesystem.index.md  codesystem.md  conceptmap.index.md  conceptmap.md  examples.index.md  examples.md  logical.index.md  logical.md  messagedefinition.index.md  messagedefinition.md  namingsystem.index.md  namingsystem.md  searchparameter.index.md  searchparameter.md  structuredefinition.index.md  structuredefinition.md  valueset.index.md  valueset.md
simplifier_ig/templates/styles/custom/: master.html  settings.style  style.css
